完成了教师和学生的注销登录功能

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -299,7 +299,8 @@
     $("#beButton").click(function () {
         $.ajax({
             type: "post",
-            url: "/OASystem/login/logOut.do",
+            url: "/OASystem/login/loginOut.do",
+            dataType:"json",
             success: function (data) {
                 if (data.code == 1) {
                     alert(data.info)
