--- a/src/main/webapp/indexStu.html
+++ b/src/main/webapp/indexStu.html
@@ -47,8 +47,9 @@
                         <a href="javascript:;">安全设置</a>
                     </dd>
                 </dl></li>
-            <li class="layui-nav-item"><a href=""><button id="beButton"></button><i
-                    class="fa fa-sign-out" aria-hidden="true"></i> 注销</a></li>
+            <li class="layui-nav-item"><a href="" id="beButton" >
+
+                <i class="fa fa-sign-out" aria-hidden="true"></i> 注销</a></li>
         </ul>
 
     </div>
@@ -222,13 +223,14 @@
     $("#beButton").click(function () {
         $.ajax({
             type:"post",
-            url:"loginOut.do",
+            url:"/OASystem/login/loginOut.do",
+            dataType:"json",
             success:function (data) {
                 if(data.code==1){
-                    layer.msg(data.info)
+                    alert(data.info)
                     window.location.href="login.html"
                 }else{
-                    layer.msg("注销失败")
+                    layer.msg("注销登录失败!")
                 }
             }
         })
