--- a/src/main/webapp/indexStu.html
+++ b/src/main/webapp/indexStu.html
@@ -205,7 +205,7 @@
     $(function (){
         $.ajax({
             type:"post",
-            url:"LoginToJudge.do",
+            url:"/OASystem/login/LoginToJudge.do",
             dataType:"json",
             success:function(data){
                 console.log(data)
