--- a/src/main/webapp/indexStu.html
+++ b/src/main/webapp/indexStu.html
@@ -214,6 +214,7 @@
                         layer.msg("同学你好，登录成功")
                     }
                 }else{
+                    // layer.msg("未登录")
                     alert("未登录")
                     window.location.href="login.html"
                 }
