--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -286,6 +286,7 @@
                             layer.msg("老师你好，登录成功")
                         }
                     } else {
+                        // layer.msg("未登录")
                         alert("未登录")
                         window.location.href = "login.html"
                     }
