完成了查询当前登录的学生的信息的功能

--- a/src/main/webapp/studentinfo.html
+++ b/src/main/webapp/studentinfo.html
@@ -155,7 +155,7 @@
 			alert(no)*/
 			$.ajax({
 				type: "get",
-				url: "http://localhost:8080/OaNew/user/queryStudent.do",
+				url: "/OASystem/student/queryStudent.do",
 				dataType: "json",
 				success: function (data) {
 					console.log(data)
