完成了修改班级信息的功能

--- a/src/main/webapp/gradelist.html
+++ b/src/main/webapp/gradelist.html
@@ -262,7 +262,7 @@
 			var id = $("#id").val()
 			$.ajax({
 				type: 'get',
-				url:'grade/updateGrade.do?id='+id,
+				url:'/OASystem/grade/updateGrade.do?id='+id,
 				data:$("#form1").serialize(),
 				dataType: 'json',
 				success:function (date) {
