完成了删除员工功能

--- a/src/main/webapp/stafflist.html
+++ b/src/main/webapp/stafflist.html
@@ -98,7 +98,7 @@
 
                     function (index) {
                         $.ajax({
-                            url: "staffdelete.do",
+                            url: "/OASystem/staff/delete.do",
                             type: "POST",
                             data: "id=" + data.id,
                             success: function (data) {
