完成了新增学科功能

--- a/src/main/webapp/courseadd.html
+++ b/src/main/webapp/courseadd.html
@@ -104,10 +104,10 @@
 								$.ajax({
 									type:"post",
 									data:$('form').serialize(),
-									url:"course/addCourse.do",
+									url:"/OASystem/course/addCourse.do",
 									success:function (res) {
 										if (res.code==1){
-											layer.msg('成功')
+											layer.msg('新增成功')
 										}else{
 											layer.msg(res.info)
 										}
