--- a/src/main/webapp/courselist.html
+++ b/src/main/webapp/courselist.html
@@ -27,7 +27,7 @@
         //第一个实例
         table.render({
             elem: '#tbdata'
-            ,url: 'course/coursepage.do' //数据接口
+            ,url: '/OASystem/course/selectAll.do' //数据接口
             ,page: true //开启分页
             ,cols: [[ //表头
                 {type:'checkbox'},
