--- a/src/main/webapp/week.html
+++ b/src/main/webapp/week.html
@@ -40,7 +40,7 @@
     $("form").submit(function () {
         $.ajax({
             type:"get",
-            url:"http://localhost:8080/OaNew/week/add.do",
+            url:"/OASystem/week/add.do",
             data:$("form").serialize(),
             success:function (data) {
                alert(data.info)
@@ -130,7 +130,7 @@
                     error : function(){
                         alert("ajax加载失败");
                     }
-
+9
                 })
 
                 //window.location.href = "http://localhost:8080/carsys/mymain/mymain.html?id=" + data.id
