--- a/src/main/webapp/weekUpdate.html
+++ b/src/main/webapp/weekUpdate.html
@@ -103,7 +103,7 @@
         //alert(id)
         $.ajax({
             type: "get",
-            url: "http://localhost:8080/OaNew/week/queryWeekById.do" + id,
+            url: "/OASystem/week/queryWeekById.do" + id,
             dataType: "json",
             success: function (data) {
                 console.log(data)
