--- a/src/main/webapp/week.html
+++ b/src/main/webapp/week.html
@@ -53,7 +53,7 @@
     $(function () {
         $.ajax({
                 type: "get",
-                url: "http://localhost:8080/OaNew/user/query.do",
+                url: "/OASystem/user/query.do",
                 dataType: "json",
                 success: function(data) {
                 console.log(data)
