--- a/src/main/webapp/weekUpdate.html
+++ b/src/main/webapp/weekUpdate.html
@@ -12,7 +12,7 @@
 <body>
 
 <div class="layui-container" style="margin-top: 20px">
-    <form class="layui-form" method="post">
+    <form class="layui-form" method="post" onsubmit="return false;">
         <table>
             <tr>
                 <td>
@@ -87,12 +87,14 @@
             url: "/OASystem/week/update.do" + id,
             dataType:"json",
             success: function(data) {
+                console.log(data)
                 if(data.code == 1){
                     alert(data.info);
                     window.location.href = "week.html";
                 }
             }
         })
+
     });
 
 </script>
