--- a/src/main/webapp/vip.html
+++ b/src/main/webapp/vip.html
@@ -46,7 +46,7 @@
     $(function () {
         $.ajax({
             type: "get",
-            url: "http://localhost:8080/OaNew/user/query.do",
+            url: "/OASystem/user/query.do",
             dataType: "json",
             success: function(data) {
                 console.log(data)
@@ -79,7 +79,7 @@
             //z找到table  id叫test的组件
             elem: '#test'
             ,id:"table"
-            ,url:"vip/queryVip.do"
+            ,url:"/OASystem/vip/queryVip.do"
             ,totalRow: true
             //这个很关键，就是解析 json数据库中数据的 一定要注意键值
             ,cols: [[
