--- a/src/main/webapp/anonymity.html
+++ b/src/main/webapp/anonymity.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="media/layui/css/layui.css">
 </head>
 <body>
-<form>
+<form onsubmit="return false">
     <table>
         <tr>
             <td><label class="col-sm-2 control-label no-padding-right" style="color:red"> 投诉内容： </label></td>
@@ -27,7 +27,7 @@
     $("form").submit(function () {
         $.ajax({
             type:"get",
-            url:"http://localhost:8080/OaNew/anonymity/add.do",
+            url:"/OASystem/anonymity/add.do",
             data:$("form").serialize(),
             success:function (data) {
                 alert(data.info)
