技术问题分页展示

--- a/src/main/webapp/skill.html
+++ b/src/main/webapp/skill.html
@@ -78,7 +78,7 @@
             //z找到table  id叫test的组件
             elem: '#test'
             ,id:"table"
-            ,url:"skill/querySkill.do"
+            ,url:"/OASystem/skill/querySkill.do"
             ,totalRow: true
             //这个很关键，就是解析 json数据库中数据的 一定要注意键值
             ,cols: [[
