--- a/src/main/webapp/exerciseslist.html
+++ b/src/main/webapp/exerciseslist.html
@@ -31,7 +31,7 @@
             //z找到table  id叫test的组件
             elem: '#exer'
             ,id:"exerTable"
-            ,url:'exer/select.do'
+            ,url:'/OASystem/exer/select.do'
 
 
             ,totalRow: true
