--- a/src/main/webapp/exercisesadd.html
+++ b/src/main/webapp/exercisesadd.html
@@ -74,7 +74,7 @@
             // console.log(eanswer)
             $.ajax({
                 type: "post",
-                url: "exer/add.do?equestion=" + equestion + "&eanswer=" + eanswer,
+                url: "/OASystem/exer/add.do?equestion=" + equestion + "&eanswer=" + eanswer,
                 data: data.field,
                 dataType: "json",
                 success: function (data) {
