--- a/src/main/webapp/questionadd.html
+++ b/src/main/webapp/questionadd.html
@@ -62,7 +62,7 @@
 			$("form").submit(function () {
 				$.ajax({
 					type:"post",
-					url:"OaNew/savequestion.do",
+					url:"/OASystem/question/addQuestion.do",
 					data:$("form").serialize(),
 					success:function (data) {
 						alert(data.info)
