--- a/src/main/webapp/resourcelibrary.html
+++ b/src/main/webapp/resourcelibrary.html
@@ -26,7 +26,7 @@
 			table.render({
 				id : 'id',
 				elem : '#tbdata',
-				url : 'OaNew/queryquestionbyno.do' //数据接口
+				url : '/OASystem/question/queryquestionbyno.do' //数据接口
 				,
 				page : true //开启分页
 				,
