--- a/src/main/webapp/questionupdate.html
+++ b/src/main/webapp/questionupdate.html
@@ -12,7 +12,7 @@
 <body>
 
 <div class="layui-container" style="margin-top: 20px"><!--action="OaNew/questionupdate.do"-->
-	<form class="layui-form"  method="post">
+	<form class="layui-form"  method="post" onsubmit="return false">
 		<div class="layui-form-item">
 
 			<label class="layui-form-label">类型</label>
@@ -62,10 +62,14 @@
 		var id = window.location.search
 		$.ajax({
 			type:"post",
-			url: "OaNew/questionupdate.do" + id,
+			url: "/OASystem/question/questionupdate.do" + id,
 			data:$("form").serialize(),
 			success: function (data) {
-				alert(data.info)
+				if (data.code=1){
+					alert(data.info)
+					window.location.href="resourcelibrary.html"
+				}
+
 			}
 			/*success:function (data) {
 				console.log(data)
