资源库删除功能

--- a/src/main/webapp/resourcelibrary.html
+++ b/src/main/webapp/resourcelibrary.html
@@ -74,7 +74,7 @@
 
 								function(index) {
 									$.ajax({
-										url : "OaNew/questiondelete.do",
+										url : "/OASystem/question/questiondelete.do",
 										type : "POST",
 										data : "id=" + data.id,
 										success : function(data) {
