--- a/src/main/webapp/recourse.html
+++ b/src/main/webapp/recourse.html
@@ -11,7 +11,7 @@
     <script src="media/js/jquery.min.js"></script>
 </head>
 <body>
-<form method="post">
+<form method="post" onsubmit="return false">
 
     <div class="layui-form-item">
         <label class="layui-form-label">问题</label>
@@ -42,10 +42,11 @@
         $("form").submit(function () {
             $.ajax({
                 type:"post",
-                url:"OaNew/addNote.do",
+                url:"/OASystem/question/addNote.do",
                 data:$("form").serialize(),
                 success:function (data) {
                     alert(data.info)
+                    window.location.href="recourse.html"
                 }
             })
             return false;
