--- a/src/main/webapp/departlist.html
+++ b/src/main/webapp/departlist.html
@@ -84,7 +84,7 @@
         //第一个实例
         table.render({
             elem: '#tbdata',
-            url: 'departpage.do' //数据接口
+            url: '/OASystem/depart/departPage.do' //数据接口
             ,
             page: true //开启分页
             ,
@@ -119,11 +119,11 @@
             if (obj.event === 'del') {
                 layer.confirm('是否确认删除部门?', function (index) {
                     $.ajax({
-                        url: "departdelete.do",
+                        url: "/OASystem/depart/deleteDepart.do",
                         type: "POST",
                         data: "id=" + data.id,
                         success: function (data) {
-                            if (data.code == 1000) {
+                            if (data.code == 1) {
                                 obj.del();//删除表格中的对应行数据
                                 layer.close(index);
                                 layer.msg("删除成功", {
