--- a/src/main/webapp/departupdate.html
+++ b/src/main/webapp/departupdate.html
@@ -38,7 +38,7 @@ function showData(obj) {
 <body>
 
 	<div class="layui-container" style="margin-top: 5px">
-		<form class="layui-form" >
+		<form class="layui-form" onsubmit="return false">
 		<div class="layui-form-item">
 				<label class="layui-form-label">部门序号</label>
 				<div class="layui-input-block">
@@ -72,7 +72,8 @@ function showData(obj) {
 		$.ajax({
 			type:"post",
 			data:$('form').serialize(),
-			url:"departupdate.do",
+			url:"/OASystem/depart/updateDepart.do",
+			dataType:"json",
 			success:function (data) {
 				if(data.code==1){
 					console.log("修改成功")
